zero-schema-macros/tests/ui/fail/25_collision_field_methods.rs
use zero_schema_macros::zero;

#[zero]
struct FieldMethodCollision {
    item: u8,
    item_mut: u8,
}

fn main() {}
